--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,33 @@
     tools:context="com.sample.asamba.MainActivity">
 
     <android.support.v7.widget.Toolbar
-        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
-        android:background="@color/colorAccent"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:background="@color/colorAccent"
+        app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <ProgressBar
+            android:id="@+id/my_progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="200dp"
+            android:layout_height="12dp"
+            android:layout_centerInParent="true"
+            android:max="100"
+            android:progress="0" />
+    </RelativeLayout>
 
 
 </LinearLayout>
