--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         </android.support.v7.widget.RecyclerView>
 
         <ProgressBar
+            android:visibility="gone"
             android:id="@+id/my_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="200dp"
